Fixed sidebar nav collapse issue.

--- a/app/src/main/resources/public/css/app.css
+++ b/app/src/main/resources/public/css/app.css
@@ -34,3 +34,7 @@ body {
     cursor: pointer;
     color: #ff5555;
 }
+
+.c-pointer:hover {
+    cursor: pointer;
+}
